Add support GitHub status
